[N/A] Add articles to engine

--- a/app/views/layouts/sample_rubyonrails_engine/application.html.erb
+++ b/app/views/layouts/sample_rubyonrails_engine/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>SampleRubyonrailsEngine</title>
   <%= stylesheet_link_tag    "sample_rubyonrails_engine/application", media: "all" %>
+  <%= stylesheet_link_tag    "saffold" %>
   <%= javascript_include_tag "sample_rubyonrails_engine/application" %>
   <%= csrf_meta_tags %>
 </head>
