--- a/app/views/sample_rubyonrails_engine/articles/show.html.erb
+++ b/app/views/sample_rubyonrails_engine/articles/show.html.erb
@@ -12,3 +12,8 @@
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
+
+<%= render "layouts/sample_rubyonrails_engine/comments/form" %>
+
+<h3>Comments</h3>
+<%= render partial: "layouts/sample_rubyonrails_engine/comments/comment", collection: @article.comments %>
